[gd_scene load_steps=3 format=3 uid="uid://he57r8puxfiv"]

[ext_resource type="Script" uid="uid://bjj4x7cd0uuue" path="res://scripts/MainMenu.gd" id="1_yqorp"]
[ext_resource type="Texture2D" uid="uid://dgtyklnc46ut4" path="res://assets/background/game_background_3.1.png" id="2_0ykhv"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -352.0
offset_bottom = -215.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqorp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 280.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "GodotGame"
horizontal_alignment = 1

[node name="PvPButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Player vs Player"

[node name="PvCPUButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Player vs CPU"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(579, 321)
scale = Vector2(0.6483724, 0.6288194)
texture = ExtResource("2_0ykhv")
